fixed password reset email text overflow

--- a/emails/resetPassword/style.css
+++ b/emails/resetPassword/style.css
@@ -2,7 +2,6 @@ body {
     width: 100%;
     padding: 1rem;
     background-color: #1b1e2b;
-    overflow: hidden;
     color: #eee;
     scrollbar-width: thin;
     font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif, apple-system,
@@ -58,10 +57,11 @@ h1 {
     color: #eee !important;
     font-size: 1.3rem;
     padding: 1rem;
-    width: 12rem;
+    width: 15rem;
 }
 
 .paper {
+    overflow-wrap: break-word;
     width: 600px;
     margin: 2rem auto;
     border-radius: 5px;
